--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Lora&display=swap" >
       <link rel="stylesheet" href="./assets/style/index.css" media="all">
-      <script src="./assets/script/index.js" type="module"></script>
+      <script src="./assets/script/cities.js" type="module"></script>
+      <script src="./assets/script/movies.js" type="module"></script>
    </head>
     <body>
       <header>
@@ -31,8 +32,10 @@
      </header> 
      <main>
          <input type="text" class="search" placeholder="Search movies...">
-         <input type="text" class="city" placeholder="City">
+         <input type="text2" class="city" placeholder="City">
+         
          <button>Search</button>
      </main>
+     <div id="movie-posters"></div>
     </body>
  </html>
